# ModularMC

./: Cargo.toml
src/: lib.rs  main.rs
src/packet/: mod.rs  packet_stream.rs
src/util/: mod.rs  var_int.rs
